# avt_vimba_camera

avt_vimba_camera/: CMakeLists.txt  package.xml
avt_vimba_camera/config/: params.yaml
avt_vimba_camera/include/VimbaCPP/Include/: Feature.hpp
avt_vimba_camera/include/avt_vimba_camera/: avt_vimba_api.hpp  avt_vimba_camera.hpp  image_subscriber_node.hpp  mono_camera_node.hpp
avt_vimba_camera/launch/: composable_test.launch.py  intra_process_test.launch.py
avt_vimba_camera/src/: avt_vimba_camera.cpp  image_subscriber_node.cpp  mono_camera_node.cpp
avt_vimba_camera/src/exec/: image_subscriber_exec.cpp  intra_process_exec.cpp
camera-settings/: settings.xml  settings_ptp.xml  settings_ptp_overlay.xml  settings_throttled.xml  settings_throttled_ptp.xml  settings_throttled_ptp_overlay.xml
